Fix comment spacing

--- a/bootstrap/less/custom.less
+++ b/bootstrap/less/custom.less
@@ -374,8 +374,8 @@ nav.navbar-default {
         text-align: center;
     }
     h2 {
-        margin-top: 1.5em;
-        margin-bottom: 0.6em;
+        margin-top: 30px;
+        margin-bottom: 10px;
     }
 
     hr {
